JumpScript/tests/baselines/reference/nonPrimitiveAsProperty.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAsProperty.jump(7,5): error TS2322: Type '{ foo: string; }' is not assignable to type 'WithNonPrimitive'.
  Types of property 'foo' are incompatible.
    Type 'string' is not assignable to type 'object'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAsProperty.jump (1 errors) ====
    interface WithNonPrimitive {
        foo: object
    }
    
    var a: WithNonPrimitive = { foo: {bar: "bar"} };
    
    var b: WithNonPrimitive = {foo: "bar"}; // expect error
        ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'WithNonPrimitive'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'object'.
    